test/spec_vectors/simd_bit_shift/fail/module_4.wat
(module (func (result v128) (i8x16.shr_u (i32.const 0) (i32.const 0))))